<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    android:minWidth="360dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:alpha="0.7"
        android:fontFamily="@font/aldrich"
        android:maxWidth="300dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/mTxt_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:alpha="0.8"
        android:fontFamily="@font/aldrich"
        android:text="@string/details"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/mTxt_details"
        app:srcCompat="@drawable/arrow_down" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/mBtn_mcq"
        app:layout_constraintEnd_toEndOf="@+id/mBtn_mcq"
        app:layout_constraintStart_toStartOf="@+id/mBtn_mcq"
        app:srcCompat="@drawable/home_logo" />

    <Button
        android:id="@+id/mBtn_mcq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_home"
        android:fontFamily="@font/aldrich"
        android:text="@string/mcq"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mBtn_mem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mBtn_mem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_home"
        android:fontFamily="@font/aldrich"
        android:text="@string/memorize"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mTxt_privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.7"
        android:fontFamily="@font/aldrich"
        android:text="@string/privacy_policy"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/mBtn_mem"
        app:layout_constraintTop_toBottomOf="@+id/mBtn_mem" />
</androidx.constraintlayout.widget.ConstraintLayout>